fix: height on mobile

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -32,7 +32,6 @@ body:has(.prevent-scrolling) {
 
 #root {
   width: 100%;
-  min-height: 100vh;
   display: flex;
   place-items: center;
 
